--- a/testing-movie-app/src/App.css
+++ b/testing-movie-app/src/App.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     transition: all .3s;
     text-decoration: none;
 }
@@ -45,6 +45,9 @@ html{
     display: flex;
     gap:.5rem;
     justify-content: space-between;
+}
+.search_bar ::placeholder{
+  color:rgba(255, 255, 255, 0.3);
 }
 .search_bar input{
     width: 95%;
